<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/blue"
xmlns:android="http://schemas.android.com/apk/res/android">


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReachSpot"
    android:background="@drawable/circular_grey_bordersolid3">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/pleaseNote" />



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.824"
        app:srcCompat="@mipmap/ic_final"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/pleaseNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@drawable/circular_grey_bordersolid"
        android:gravity="center"
        android:lines="5"
        android:maxLines="6"
        android:text="@string/please_note_in_order_to_know_what_to_write_in_the_section_below_we_recommend_you_to_click_on_the_maps_button_at_the_top_right_corner_and_to_check_the_building_parking_area_symbol"
        android:textColor="@color/lightBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:fontFamily="@font/courgette"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/circular_grey_bordersolid3"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/pleaseNote"
        app:layout_constraintTop_toBottomOf="@+id/pleaseNote">


        <TextView
            android:id="@+id/parksInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="left"
            android:lines="2"
            android:maxLines="2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/would_you_like_to_see_the_expected_valid_spots_schedule_in_a_specific"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:fontFamily="@font/asap"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />
            <RadioGroup
                android:id="@+id/reachRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:fontFamily="@font/asap"
                android:textSize="14sp">

                <RadioButton
                    android:id="@+id/areaRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/area"
                    android:textColor="@color/blue" />

                <RadioButton
                    android:id="@+id/buildingRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/blue"
                    android:text="Building"/>

            </RadioGroup>

        <AutoCompleteTextView
            android:id="@+id/areaOrBuildingNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/design_default_color_background"
            android:hint="@string/enter_building_or_area_symbol"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.282"
            app:layout_constraintVertical_bias="0.113"
            android:fontFamily="@font/asap"
            android:textSize="14sp"
            android:textColorHint="@color/lightBlue"/>

        <EditText

            android:id="@+id/dateToExpect"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_background"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/enter_a_specific_date"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.282"
            app:layout_constraintVertical_bias="0.113"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/asap"
            android:textSize="14sp"
            android:textColorHint="@color/lightBlue"
            />

        <Button
            android:id="@+id/check"
            android:text="@string/check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="45dp"

            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/circular_grey_bordersolid2"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.387"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/building"
            app:layout_constraintVertical_bias="0.042"
            android:fontFamily="@font/asap"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>